ensure toc nav items dont wrap

--- a/app/site/site.styl
+++ b/app/site/site.styl
@@ -582,6 +582,7 @@ html
         &:not(:hover)
           background-image none
           text-shadow none
+          white-space nowrap
 
   .docs-content
     display block
